--- a/index.html
+++ b/index.html
@@ -11,35 +11,15 @@
     <link rel="stylesheet" type="text/css" href="css/css.css">
     <audio src="media/music.mp3"></audio>
     <title>chassis.site</title>
-      <style type="text/css">
-        img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-      </style>
   </head>
   <body>
-  	 <audio id="audio" loop>
-        <source src="media/music.mp3" type="audio/mp3">
-     </audio>
     <div id="app">
       <div class="text">
         <h1>
           <span class="magic">
-            <span class="magic-text">chassis</span>
+            <span class="magic-text">&lt; 3</span>
           </span>
         </h1>
     </div>
-      <div id="links">
-        <a href="https://t.me/chassis_gh" class="tele" target="_blank">
-          <img src="images/telegram.png" alt="telegram" title="telegram">
-        </a>
-        <a href="discord:941290571878780938?add"class="dc" target="_blank">
-          <img src="images/discord.png" alt="discord" title="discord">
-        </a>
-      </div>
-    </div>
-    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
