--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   </head>
   <body>
     <div id="enter">
-      <b class="begin">chassis.site</b>
-      <b class="begin1">[ click to enter ]</b>
+      <b class="begin">[ click to enter ]</b>
     </div>
     <script>
       document.getElementById("enter").addEventListener("click", function() {
