--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatibale" content="ie-edge">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="/css.css">
+    <link rel="stylesheet" type="text/css" href="css\css.css">
     <title>chassis</title>
 </head>
 <body>
-  <div class="cursor-dot" data-cursor-dot></div>
-  <div class="cursor-outline" data-cursor-outline></div>
   <div>
     <h1>~ chassis ~</h1>
   </div>
@@ -34,6 +32,6 @@
       <a href="https://github.com/chassisGH" target="_blank">Github</a> ~
     </p>
   </footer>
-  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js\main.js"></script>
 </body>
 </html>
