--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatibale" content="ie-edge">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="css/css.css">
+    <link rel="stylesheet" type="text/css" href="css\css.css">
     <title>chassis</title>
 </head>
 <body>
   <div>
     <h1>~ chassis ~</h1>
   </div>
-  <canvas id="canvas"></canvas>
   <div class="frame">
-
+    <div class="stripes" id="stripes-container">
+    </div>
     <div class="center">
-      <div class="stripes" id="stripes-container">
-      </div>
         <svg class="polygon">
             <polygon class="middle" points="68,0 91,0 160,117 46,117 59,93 121,93" />
             <polygon class="dark" points="68,41 79,59 46,117 160,117 147,160 11,140" />
@@ -34,6 +32,6 @@
       <a href="https://github.com/chassisGH" target="_blank">Github</a> ~
     </p>
   </footer>
-  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js\main.js"></script>
 </body>
 </html>
