--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div>
     <h1>~ chassis ~</h1>
   </div>
+  <canvas id="canvas"></canvas>
   <div class="frame">
     <div class="stripes" id="stripes-container">
     </div>
