--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p>
       ~ <a href="mailto:chassis@courvix.com" target="_blank">Email</a> ~
       <a href="https://t.me/chassis_gh" target="_blank">Telegram</a> ~
-      <a href="https://github.com/chassisGH" target="_blank">Github</a> ~
+      <a href="https://github.com/chasssis" target="_blank">Github</a> ~
     </p>
   </footer>
   <script type="text/javascript" src="js\main.js"></script>
